Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-8375

The intellisense and syntax highlighting do not work with typedef of templated typedef

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • Qt Creator 3.4.0-rc1
    • Qt Creator 2.7.0, Qt Creator 2.8.0-beta
    • C/C++/Obj-C++ Support
    • None
    • Linux Mint 13
    • 13913ed3913eac8b5fd0d63e4706c44223f65e4b

    Description

      I will describe the problem on the example:

      #include <string>
      
      using namespace std;
      
      struct A
      { typedef string Astring_t; };
      
      template <class T>
      struct B
      { typedef typename T::Astring_t Bstring_t; };
      
      struct C : public B<A>
      {
          void test()
          {
              Bstring_t aStr;
              aStr.c_str(); // HERE AUTOCOMPLETION AND HIGLIGHTING don't work
          }
      };
      
      int main() {}
      

      In the method C::test() the methods of object aStr are not autocompleted nor higlighted. In the example the object aStr is of origin type string and the c_str() method should be higlighted and be available as a completion in intellisense.

      But it isn't.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            erikv Erik Verbruggen
            romek Roman Konieczny
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes